[package]
name = "asn1derpy"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
license = "Apache-2.0 OR MIT"
description = "ASN.1 DER writer."
categories = ["embedded", "encoding", "no-std"]
keywords = ["asn1", "der", "rust", "no-std"]
repository = "https://github.com/ycrypto/asn1derpy"
readme = "README.md"
edition = "2018"

[dependencies]
heapless-bytes = "0.1.0"
